--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ html {
     font-size: 30px;
     font-weight: 300;
     font-family: 'Jost', sans-serif;
+    scroll-behavior: smooth;
 }
+
 
 body {
     display: flex;
